--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -122,7 +122,7 @@ not_found = The target couldn't be found.
 network_error = Network error
 
 [startpage]
-app_desc = ME!
+app_desc = Door43 Content Service
 install = Easy to install
 install_desc = Simply <a target="_blank" rel="noopener noreferrer" href="https://docs.gitea.io/en-us/install-from-binary/">run the binary</a> for your platform, ship it with <a target="_blank" rel="noopener noreferrer" href="https://github.com/go-gitea/gitea/tree/master/docker">Docker</a>, or get it <a target="_blank" rel="noopener noreferrer" href="https://docs.gitea.io/en-us/install-from-package/">packaged</a>.
 platform = Cross-platform
